# sendfd

./: Cargo.toml  README.mkd  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: sendfd.yml
src/: changelog.rs  lib.rs
