[package]
name = "sendfd"
version = "0.3.3"
authors = [
    "Simonas Kazlauskas <simonas@standard.ai>",
    "Bernardo Meurer <bernardo@standard.ai>",
    "Léo Gaspard <leo@standard.ai>"
]
edition = "2015"
description = "Send file descriptors along with data over UNIX domain sockets"
keywords = ["ipc"]
license = "Apache-2.0 OR BSD-3-Clause"
repository = "https://github.com/standard-ai/sendfd"
documentation = "https://docs.rs/sendfd"

[dependencies]
libc = "0.2"
tokio_0_2 = { package = "tokio", version = "0.2", features = [ "uds" ], optional = true }
tokio_0_3 = { package = "tokio", version = "0.3", features = [ "net" ], optional = true }
